src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Another_agency_currently_delivering__c</fullName>
        <inlineHelpText>Is another agency currently delivering the service?</inlineHelpText>
        <label>Another agency currently delivering?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_other_reasons__c</fullName>
        <label>Any other reasons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approx_amount_funding__c</fullName>
        <inlineHelpText>FCA must be attached to this proposal</inlineHelpText>
        <label>Total Cost of this Proposal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area2__c</fullName>
        <formula>TEXT(Locality__r.zzdelArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This person is not an Area Manager.</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Area Management</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Regional</value>
            </filterItems>
            <infoMessage>Select an Area Manager</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <controllingField>Country_Region__c</controllingField>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia and Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North and East Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South and West Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This person is not a Business Development Manager</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>BDM</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>Regional Management -</value>
            </filterItems>
            <infoMessage>Please select a Business Development Manager</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficiaries__c</fullName>
        <label>Beneficiaries</label>
        <picklist>
            <picklistValues>
                <fullName>People with dementia - all ages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BME communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early stage dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gay / Lesbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and social care professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with advanced stage dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia over 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia under 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Younger people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other minority groups</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Capacity_infrastructure_to_deliver__c</fullName>
        <inlineHelpText>Explain how we have the capacity/infrastructure to deliver</inlineHelpText>
        <label>Capacity/infrastructure to deliver</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Proposal__c</fullName>
        <formula>Locality__r.COst_Centre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country/Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_delivering_the_service__c</fullName>
        <label>Currently delivering the service?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demography__c</fullName>
        <label>Demography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependence_on_buying_external_services__c</fullName>
        <inlineHelpText>Does your service development or tender rely on sub-contracting to a third party in order to deliver the service?</inlineHelpText>
        <label>zzdel_DependenceonbuyingExternalServices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_proposed_service__c</fullName>
        <inlineHelpText>Brief description of proposed service. Use ASTOR as a tool:
Aims, Settings, Target group, Objectives (and service outputs to achieve them), Resources needed</inlineHelpText>
        <label>Description of proposed service</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_TUPE_apply__c</fullName>
        <inlineHelpText>For all tender bids, assume yes unless clear evidence otherwise.

If yes, make sure costs are in the budget - refer to BDM for avice.</inlineHelpText>
        <label>Does TUPE apply?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft_budget_attached__c</fullName>
        <label>FCA attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_service_users_views__c</fullName>
        <inlineHelpText>How will the views of service users be taken into account in any evaluation?</inlineHelpText>
        <label>Evaluation: service users&apos; views</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_from_service_users__c</fullName>
        <inlineHelpText>Is there detailed evidence or views from service users? e.g. consultation/focus groups</inlineHelpText>
        <label>Evidence from service users?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_good_practice__c</fullName>
        <inlineHelpText>Detail any existing good practice from other areas</inlineHelpText>
        <label>Existing good practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_service_data__c</fullName>
        <label>Existing service data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fits_Corporate_Plan__c</fullName>
        <label>zzdel_HowitfitsSociety&apos;s Corporate Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Service improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understand impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help more people</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target the most in need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence-based service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognised education &amp; development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Be an accredited awarding body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased accessibiity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended evidence base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented dementia strategy plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative services and provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developed and extended service provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transform individual services provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased rights and protection</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fits_external_business_plans__c</fullName>
        <inlineHelpText>Describe how it fits with external strategic/operational business plans (health/local authority)</inlineHelpText>
        <label>Fits with external business plans?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_source_s__c</fullName>
        <label>Funding source(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Tender (competitive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender (non-competitive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Social Care Statutory bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variation to existing contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statutory Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Fundraising/Voluntary Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expression of interest only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source unknown at present</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Have_relationship_with_a_trust__c</fullName>
        <inlineHelpText>Do you have any current relationships with charitable trusts or have any in mind?</inlineHelpText>
        <label>zzdel_Have relationship with a trust?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_social_care_professional_views__c</fullName>
        <label>Health/social care professional views</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_it_fits_with_the_Services_Framework__c</fullName>
        <label>How it fits with the Services Framework</label>
        <picklist>
            <picklistValues>
                <fullName>Principle 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principle 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principle 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_it_meets_strategic_objective__c</fullName>
        <inlineHelpText>Describe how the proposal meets the strategic objective you selected</inlineHelpText>
        <label>zzdel_How it meets strategic objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_years_funding__c</fullName>
        <label>How many years&apos; funding?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_will_service_be_evaluated__c</fullName>
        <inlineHelpText>Refer to service specification, where available</inlineHelpText>
        <label>How will service be evaluated?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Identified_funding_in_fundraising_plan__c</fullName>
        <inlineHelpText>Have you identified any funding for this service in your fundraising plan? If so, please attach details.</inlineHelpText>
        <label>zzdel_IdentifiedFundinginFundraisingPlan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identified_gap__c</fullName>
        <inlineHelpText>(Survey results etc)</inlineHelpText>
        <label>Identified gap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_title__c</fullName>
        <formula>CreatedBy.Title</formula>
        <label>Job title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_local_working_considered__c</fullName>
        <inlineHelpText>Have you considered whether this service could be delivered across several local services, a locality or area?</inlineHelpText>
        <label>zzdel_Joint local working considered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_delivery_skills__c</fullName>
        <inlineHelpText>Do you consider that existing local organisations have the relevant skills to deliver?</inlineHelpText>
        <label>Local delivery skills?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locality or Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <infoMessage>Select an Alzheimer&apos;s Society office</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_beneficiary__c</fullName>
        <label>Other beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_working_been_considered__c</fullName>
        <inlineHelpText>Have you considered whether this service could be delivered in partnership with other organisations locally?</inlineHelpText>
        <label>Partnership working been considered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_ID__c</fullName>
        <displayFormat>P-{00000}</displayFormat>
        <label>Proposal ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Locality__r.Region_Alztrading__c)</formula>
        <label>Country/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_definition__c</fullName>
        <label>zzdel_Service definition</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day support from other providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia advisers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafés</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home support from other providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outings and day trips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision of grants for holidays/other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing for the brain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone helplines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_recently_reviewed__c</fullName>
        <inlineHelpText>Has the service been recently reviewed (internally/externally within the last two years)</inlineHelpText>
        <label>Service recently reviewed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_specification__c</fullName>
        <label>Service specification</label>
        <picklist>
            <picklistValues>
                <fullName>Activity Groups operational framework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Care and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Adviser service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friendly Communities - to dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Care and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Provision - to be developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outing and Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Home Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing for the Brain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Involvement - to be developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Service specification available</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_start_funding_date__c</fullName>
        <inlineHelpText>When is the service due to start or from when is funding needed?</inlineHelpText>
        <label>Service start/funding date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Skilled_staff_available_to_deliver__c</fullName>
        <inlineHelpText>Do we have the necessary skilled staffing available to deliver?</inlineHelpText>
        <label>Skilled staff available to deliver?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_current_funding__c</fullName>
        <inlineHelpText>(if applicable)</inlineHelpText>
        <label>Source of current funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_budget_quoted__c</fullName>
        <inlineHelpText>For tender bids, has a specific budget been quoted?</inlineHelpText>
        <label>Specific budget quoted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specified_in_current_business_plans__c</fullName>
        <inlineHelpText>Is the service specified in current regional/area/local business plans?</inlineHelpText>
        <label>Specified in current business plans?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing but repackaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension to existing service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_objectives_met__c</fullName>
        <inlineHelpText>Demonstrate the way in dementia care and support; Be the foremost contact point for anyone dealing with dementia; Lead research to improve care and prevention and move closer to a cure;Campaign for people affected by dementia to live the lives they want</inlineHelpText>
        <label>Strategic ambitions met</label>
        <picklist>
            <picklistValues>
                <fullName>Service Quality dementia care &amp; support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencing policy -makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info &amp; help for people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; support for carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead on worldclass knowledge on dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor services -action to address gaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research -cause, prevention and care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellence -governance leadership &amp; mgt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; info for all involved in care</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Suitable_premises_available__c</fullName>
        <inlineHelpText>Do we have suitable premises (e.g. to meet H&amp;S legislation and service standards)?</inlineHelpText>
        <label>Suitable premises available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sustainability_of_service_exit_strategy__c</fullName>
        <label>Sustainability of service/exit strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TUPE_Contracts_Exist__c</fullName>
        <inlineHelpText>If TUPE applies, are existing staff contracts and collective agreements available?</inlineHelpText>
        <label>Existing contracts/agreements available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tender_submission_date__c</fullName>
        <label>Tender deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timescale_to_set_up_realistic__c</fullName>
        <inlineHelpText>Is the timescale to set up the service realistic?</inlineHelpText>
        <label>Timescale to set up realistic?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_current_funding__c</fullName>
        <label>Type of current funding</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vol income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_applicable__c</fullName>
        <inlineHelpText>Refer to Regional Accountant for advice</inlineHelpText>
        <label>VAT applicable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Which_funding_source_s__c</fullName>
        <label>Which funding source(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_joint_working_considered__c</fullName>
        <label>zzdel_Who, if joint working considered?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_partnership_working_considered__c</fullName>
        <label>Who, if partnership working considered?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>